# ForgeCode

Codex_Clone/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Codex_Clone/src/: App.tsx  index.css
Codex_Clone/src-tauri/: tauri.conf.json
Codex_Clone/src-tauri/src/: main.rs
Codex_Clone/src-tauri/src/agent/: mod.rs  orchestrator.rs
Codex_Clone/src-tauri/src/context/: mod.rs
Codex_Clone/src-tauri/src/parser/: mod.rs
Codex_Clone/src-tauri/src/patcher/: mod.rs
Codex_Clone/src/components/: Chat.tsx  Editor.tsx  Logo.tsx  PlanPanel.tsx  Sidebar.tsx  Terminal.tsx
Codex_Clone/src/services/: ai.ts
ForgeCode/src-tauri/: Cargo.toml  main.tsx
ForgeCode/src-tauri/icons/: icon.icns
ForgeCode/src-tauri/src/: terminal.rs  watcher.rs
ForgeCode/src-tauri/src/agent/: runtime.rs
ForgeCode/src-tauri/src/parser/: types.rs
ForgeCode/src/components/: CommandPalette.tsx
ForgeCode/src/services/: tools.ts
